# fastapi-celery-messaging

./: .env.example  .gitignore  Nginx.conf  pyproject.toml
src/: main.py
src/services/: email.py
src/utils/: celery.py
